// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders an iframe 1`] = `
<PreviewFrame
  content="<h1>Hello, World!</h1>"
>
  <iframe
    onLoad={[Function]}
    title="preview email template frame"
  />
</PreviewFrame>
`;

exports[`sets iframe height after it loads 1`] = `
<PreviewFrame
  content="<h1>Hello, World!</h1>"
>
  <iframe
    height="99px"
    onLoad={[Function]}
    title="preview email template frame"
  />
</PreviewFrame>
`;
